lang.java.statics.test/tests/packages/imports/single-file-import-not-visible-in-other-compilation-units-of-same-package.no.spt
module packages/single-file-import-not-visible-in-other-compilation-units-of-same-package_no

language metaborg-java

test single-file-import-not-visible-in-other-compilation-units-of-same-package [[

test;



// error: cannot find symbol

[p] {

    [A]
    package p;
    import q.C;
    public class A {}

    [B]
    package p;
    public class B {
        public C c;
    }

}

[q] {

    [C]
    package q;
    public class C {}

}

]] analysis fails
   run javacFails to ""
